# 3D-print-quote-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.example.yaml
examples/: cube_mm.stl  input_form4_basic.json
src/sla_quote/: api.py  cli.py  engine.py  geometry.py  model.py  pricing.py  render_pdf.py  render_xlsx.py  server.py  utils.py
tests/: test_engine_golden.py  test_stl_cube_volume.py
